# ndbc-xml

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
ndbc_xml/: __init__.py  config.py  declination.py  ingest.py  ndbc.py  pipeline.py  process.py  state.py  test_ndbc_xml.py  xml_writer.py
ndbc_xml/tests/: test_ndbc_xml.py
utilities/: ndbc.sh
